try to fix router nasename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://buketkonuk.github.io/buketportfolio",
+  "homepage": "https://buketkonuk.github.io/buketportfolio",
   "name": "buketportfolio",
   "version": "0.1.0",
   "private": true,
